Bug 11920 - gspca does not recognize supported camera
Summary: gspca does not recognize supported camera
Status: CLOSED PATCH_ALREADY_AVAILABLE
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(Other) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jean-Francois Moine
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-31 08:54 UTC by Julian Petri
Modified: 2008-11-07 03:51 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.27-7
Subsystem:
Regression: ---
Bisected commit-id:


Attachments

Description Julian Petri 2008-10-31 08:54:12 UTC
Latest working kernel version: -
Earliest failing kernel version: 2.6.27
Distribution: Ubuntu Intrepid
Hardware Environment: Desktop computer, USB Webcam with vendor/product id 0x0c45:0x602c
Software Environment:
Problem Description: The built-in gspca driver (new in kernel 2.6.27) does not recognize the camera 0x0c45:0x602c . gspca driver is not applied for the device.

Steps to reproduce: Blacklist the sn9c102 driver that Ubuntu loads when plugging in the camera (this driver does not work). Reboot. Plug in the camera. dmesg:

[ 3010.468023] usb 1-1: new full speed USB device using ohci_hcd and address 7
[ 3010.677667] usb 1-1: configuration #1 chosen from 1 choice

nothing more. The webcam is not available in Ekiga, Cheese or Skype.
Comment 1 Jean-Francois Moine 2008-11-04 23:08:18 UTC
(In reply to comment #0)
    [snip]
> Steps to reproduce: Blacklist the sn9c102 driver that Ubuntu loads when
> plugging in the camera (this driver does not work). Reboot. Plug in the
> camera.
    [snip]
> nothing more. The webcam is not available in Ekiga, Cheese or Skype.

Putting the sn9c102 in the black list does not work because the vend:prod of the webcam is not defined in gspca at generation time. You must do a kernel 'make config', remove the sn9c102 driver and recompile.
Comment 2 Julian Petri 2008-11-06 08:21:21 UTC
(In reply to comment #1)
> (In reply to comment #0)
>     [snip]
> > Steps to reproduce: Blacklist the sn9c102 driver that Ubuntu loads when
> > plugging in the camera (this driver does not work). Reboot. Plug in the
> camera.
>     [snip]
> > nothing more. The webcam is not available in Ekiga, Cheese or Skype.
> 
> Putting the sn9c102 in the black list does not work because the vend:prod of
> the webcam is not defined in gspca at generation time. You must do a kernel
> 'make config', remove the sn9c102 driver and recompile.
> 

Yes, thank you. I have looked at the kernel code and found the following to methods to make the camera work:

Firstly, as you wrote, removing the sn9c102 driver makes the cam work correctly.

Secondly, removing the line

	{USB_DEVICE(0x0c45, 0x602c), SB(OV7630, 102)},

from the construct

#if !defined CONFIG_USB_SN9C102 && !defined CONFIG_USB_SN9C102_MODULE
...
#endif

and pasting it ouside the construct makes the camera work, too (with blacklisting sn9c102)

Note You need to log in before you can comment on or make changes to this bug.