V4L/DVB (9560): gspca: Let gspca handle the webcam 0c45:602c instead of sn9c102.

According to http://bugzilla.kernel.org/show_bug.cgi?id=11920,
the driver sn9c102 does not work for this webcam.

Signed-off-by: Jean-Francois Moine <moinejf@free.fr>
Signed-off-by: Mauro Carvalho Chehab <mchehab@redhat.com>